fixed display errors, background not covering the 100% of the vh

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,14 @@ body {
   font-family: arial, helvetica, sans-serif;
 } */
 
+html {
+  height: 100%;
+}
+
 body {
   background: #0f171e;
   font-family: Arial, Helvetica, sans-serif;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
